# baxter_final_project

./: CMakeLists.txt  package.xml
scripts/: _init_baxter.py  gripperControl.py  motionControl.py  relayObjPose.py  sequencer.py
srv/: TrigDirective.srv  TrigObjMove.srv  TrigOffsetMove.srv
