<?xml version="1.0"?>
<package format="2">
  <name>container-manipulator_baxter</name>
  <version>0.0.1</version>
  <description>This package is designed to work with Rethink Robotics' Baxter platform, and implements controls designed to grasp and manipulate the lids of common household containers.

  This project is a fork of the me495_baxter_jar project.</description>

  <maintainer email="WilliamSpies2018@u.northwestern.edu">wspies</maintainer>

  <license>TBD</license>

  <url type="website">https://github.com/spieswl/container-manipulator_baxter</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>baxter_interface</depend>
  <depend>ar_track_alvar</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export></export>
</package>
